# lection-debug-and-profile

.github/workflows/: build.yml
01_tests/: CMakeLists.txt
03_code_analyze/: CMakeLists.txt
04_profile/: 02_benchmark_fixture.cpp  CMakeLists.txt
05_hw/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  cov.sh  fixtures.h  gmain.cpp  gtest_stack.cpp  gtestf_stack.cpp  main.c  stack.c  stack.h  test_create_node.cpp  test_push.cpp  test_stack_is_empty.cpp  test_traverse_stack.cpp
05_hw/benchmarks/: main.cpp
05_hw/tests/: main.cpp
